[gd_scene load_steps=2 format=3 uid="uid://bh8xkxrmcokdt"]

[ext_resource type="Script" path="res://scripts/MessageBubble.gd" id="1_xm8n4"]

[node name="MessageBubble" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
script = ExtResource("1_xm8n4")

[node name="BubbleContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="MessagePanel" type="Panel" parent="BubbleContainer"]
layout_mode = 2

[node name="MessageMargin" type="MarginContainer" parent="BubbleContainer/MessagePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="MessageLabel" type="RichTextLabel" parent="BubbleContainer/MessagePanel/MessageMargin"]
layout_mode = 2
bbcode_enabled = true
fit_content = true